Fix header padding/height/vertical-alignment on IE

--- a/app/styles/_header.sass
+++ b/app/styles/_header.sass
@@ -4,7 +4,7 @@
     bottom: 1px solid #ddd
   +gradient-bottom(#eee)
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFFFFF, endColorstr=#EEEEEE, GradientType=0)"
-  height: 40px
+  padding-bottom: 5px
 
 div.header
   width: 960px
